--- a/app/views/apps/_assessment_2205/views/partner/projects/add/index.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/add/index.html
@@ -106,7 +106,7 @@
   <details class="govuk-details" style="margin-bottom: 5px;">
     <summary class="govuk-details__summary">Help with channel of delivery codes</summary>
     <div class="govuk-details__text">
-      <p class="nc">Tell the user what each code is and when to use it</p>
+      <p class="govuk-body">Channel of delivery codes are an <a href="#">externally managed list of codes</a> that describe how the external implementor will work on the sub activity.</p>
     </div>
     </details>
 <select class="select-oda-channel">
@@ -120,9 +120,9 @@
   Aid type
 </label>
 <details class="govuk-details" style="margin-bottom: 5px;">
-  <summary class="govuk-details__summary">Help with AID type codes</summary>
+  <summary class="govuk-details__summary">Help with Aid type codes</summary>
   <div class="govuk-details__text">
-    <p class="nc">Tell the user what each code is and when to use it</p>
+    <p class="govuk-body">Aid types are categories of <a href="#">aid defined by DFID</a>.</p>
   </div>
   </details>
 <select class="select-aid">
@@ -158,7 +158,7 @@
   <details class="govuk-details" style="margin-bottom:5px;">
     <summary class="govuk-details__summary">What is a h2 activity?</summary>
     <div class="govuk-details__text">
-      <p class="govuk-body">Explain to the user what a h2 activities is and explain its previous names.</p>
+      <p class="govuk-body">You may of referred activity (h2) as project or call in the past. The activity (h2) refers to brief of what you are asking external implementors to come forward with projects for.</p>
     </div>
   </details>
   <input class="govuk-input" id="address-line-1" name="address-line-1" type="text">
@@ -174,7 +174,7 @@
   <details class="govuk-details" style="margin-bottom: 5px;">
   <summary class="govuk-details__summary">Help with channel of delivery codes</summary>
   <div class="govuk-details__text">
-    <p class="nc">Tell the user what each code is and when to use it</p>
+    <p class="govuk-body">Channels of delivery are a list of channels that describe the main methods an external implementor will deliver their sub-activity.</p>
   </div>
   </details>
   <select class="select-oda-channel">
@@ -188,11 +188,11 @@
   Aid type
   </label>
   <details class="govuk-details" style="margin-bottom: 5px;">
-  <summary class="govuk-details__summary">Help with AID type codes</summary>
-  <div class="govuk-details__text">
-  <p class="nc">Tell the user what each code is and when to use it</p>
-  </div>
-  </details>
+    <summary class="govuk-details__summary">Help with Aid type codes</summary>
+    <div class="govuk-details__text">
+      <p class="govuk-body">Aid types are categories of <a href="#">aid defined by DFID</a>.</p>
+    </div>
+    </details>
   <select class="select-aid">
   <option value="" disabled selected></option>
   <option value="a01">A01</option>
@@ -221,7 +221,7 @@
       <details class="govuk-details" style="margin-bottom: 5px;">
         <summary class="govuk-details__summary">Help with GCRF challenges</summary>
         <div class="govuk-details__text">
-          <p class="nc">Tell the user what each code is and when to use it</p>
+          <p class="govuk-body">All GCRF funding is aligned to <a href="#">themes</a> that will be awarded funding for.</p>
         </div>
         </details>
       <div class="govuk-checkboxes govuk-checkboxes--small">
