edited the landing page for the odart-3005 prototype

--- a/app/views/apps/_odart_3005/index.html
+++ b/app/views/apps/_odart_3005/index.html
@@ -18,12 +18,7 @@
 
 			{% block description %}
 				<h2 class="govuk-heading-m">Description</h2>
-				<p>This is the ODART prototype for alpha assessment.</p>
-				<p>There are, currently, two main user groups; BEIS and delivery partners.
-					<ul class="govuk-list govuk-list--bullet">
-						<li>delivery partners submit financial data and activity data</li>
-					<li>BEIS users QA and report on data submitted by delivery partners.</li>
-				</p>
+				<p>This is the ODART prototype for user feedback.</p>
 				<h3 class="govuk-heading-s">Before you start</h3>
 				<p class="govuk-body">You will need:</p>
 				<ul class="govuk-list govuk-list--bullet">
