--- a/app/views/apps/_odart_3005/views/beis/reporting/index.html
+++ b/app/views/apps/_odart_3005/views/beis/reporting/index.html
@@ -20,22 +20,22 @@
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row"><abbr title="International Aid Transparency Initiative">IATI</abbr> transparency report</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-transparency.herokuapp.com/">View report</a></td>
+            <td class="govuk-table__cell"><a href="http://beis-odart-alpha-frontend.herokuapp.com/transparency/">View report</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Quarterly forecast by location</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/report">View report</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-frontend.herokuapp.com/report">View report</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Budget deficit report</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/report">View report</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-frontend.herokuapp.com/report">View report</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Annual report</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/report">View report</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-frontend.herokuapp.com/report">View report</a></td>
           </tr>
         </tbody>
       </table>
@@ -44,7 +44,7 @@
     <section id="customReports">
       <h2 class="govuk-heading-l">Custom reports</h2>
       <p class="govuk-body">Create, run and customise a report</p>
-      <a href="https://beis-odart-alpha-filtering.herokuapp.com/filter" class="govuk-button">Create a new report</a>
+      <a href="https://beis-odart-alpha-frontend.herokuapp.com/filter" class="govuk-button">Create a new report</a>
       <h3 class="govuk-heading-m">Existing custom reports</h3>
       <table class="govuk-table" id="trackerReviewTable">
         <thead class="govuk-table__head">
@@ -60,31 +60,31 @@
             <td class="govuk-table__header" scope="row">Ebola by region (test)<span class="govuk-hint">Description</span></td>
             <td class="govuk-table__cell">Jane Margo</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/filter">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-frontend.herokuapp.com/filter">Open</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Ebola by region (test)<span class="govuk-hint">Description</span></td>
             <td class="govuk-table__cell">Jane Margo</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/filter">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-frontend.herokuapp.com/filter">Open</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Ebola by region (test)<span class="govuk-hint">Description</span></td>
             <td class="govuk-table__cell">Jane Margo</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/filter">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-frontend.herokuapp.com/filter">Open</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Ebola by region (test)<span class="govuk-hint">Description</span></td>
             <td class="govuk-table__cell">Jane Margo</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/filter">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-frontend.herokuapp.com/filter">Open</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Ebola by region (test)<span class="govuk-hint">Description</span></td>
             <td class="govuk-table__cell">Jane Margo</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/filter">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-frontend.herokuapp.com/filter">Open</a></td>
           </tr>
         </tbody>
       </table>
